--- a/bower.json
+++ b/bower.json
@@ -4,13 +4,15 @@
   "private": "true",
   "devDependencies": {},
   "dependencies": {
+    "rsvp.js": "rsvp#~3.1.0",
     "firebase": "~2.3.1",
     "ionic": "~1.1.0",
     "angular": "~1.4.3",
     "angularfire": "~1.1.3",
     "ngCordova": "~0.1.17-alpha",
     "angular-resource": "~1.4.3",
-    "lodash": "~3.10.0"
+    "lodash": "~3.10.0",
+    "geofire": "~3.2.2"
   },
   "resolutions": {
     "angular": "1.4.3"
