--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "author": "ADA <castronu@gmail.com>",
   "description": "",
   "dependencies": {
+    "geofire": "^3.2.2",
+    "rsvp": "^3.1.0",
     "wiredep": "^3.0.0-beta"
   },
   "devDependencies": {
