--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
     "geofire": "~3.2.2"
   },
   "resolutions": {
-    "angular": "1.4.3"
+    "angular": "1.4.3",
+    "firebase": "~2.3.1"
   }
 }
